# butteraugli-rs

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: benchmark.rs
butteraugli-cc/: butteraugli.cc  butteraugli.h
butteraugli-sys/: Cargo.toml  README.md  build.rs
butteraugli-sys/.cargo/: config
butteraugli-sys/benches/: benchmark.rs
butteraugli-sys/butteraugli-cc/: butteraugli.cc  butteraugli.h
butteraugli-sys/src/: lib.rs
butteraugli-sys/test-images/: heatmap.1.pnm
butteraugli-sys/tests/: cli.rs
src/: butteraugli.rs  image.rs  lib.rs  main.rs  test.rs
tests/: cli.rs
