[package]
name = "butteraugli"
version = "0.1.0"
authors = [
    "Luca Barbato <lu_zero@gentoo.org>",
    "sn99 <siddharthn.099@gmail.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "Rust port of the Google butteraugli metric"
homepage = "https://github.com/rust-av/butteraugli-rs"
readme = "README.md"
repository = "https://github.com/rust-av/butteraugli-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
structopt = "0.3"
image = "0.23.14"
v_frame = "0.2.1"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "1.0.5"
predicates = "1.0.8"
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release.build-override]
codegen-units = 1
opt-level = 3