[package]
name = "butteraugli-sys"
version = "0.1.0"
authors = [
    "Luca Barbato <lu_zero@gentoo.org>",
    "sn99 <siddharthn.099@gmail.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "Bindings to the Google butteraugli metric"
homepage = "https://github.com/rust-av/butteraugli-rs"
readme = "README.md"
repository = "https://github.com/rust-av/butteraugli-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
libc = "0.2"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
assert_cmd = "1.0.5"
predicates = "1.0.8"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release.build-override]
codegen-units = 1
opt-level = 3